# pipecat-mcp-server

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/skills/pipecat/: SKILL.md
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-question.yml
src/pipecat_mcp_server/: agent.py  agent_ipc.py  bot.py  server.py
src/pipecat_mcp_server/processors/: screen_capture.py  voxtral_streaming_stt.py  voxtral_stt.py
src/pipecat_mcp_server/processors/screen_capture/: base_capture_backend.py  linux_x11_capture_backend.py  macos_capture_backend.py
